--- a/coin_collector.html
+++ b/coin_collector.html
@@ -76,9 +76,9 @@ body {
 	z-index: 1;
 }
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="coin-collector.icon.png" />
-<link rel="apple-touch-icon" href="coin-collector.apple-touch-icon.png"/>
-<link rel="manifest" href="coin-collector.manifest.json">
+		<link id="-gd-engine-icon" rel="icon" type="image/png" href="coin_collector.icon.png" />
+<link rel="apple-touch-icon" href="coin_collector.apple-touch-icon.png"/>
+<link rel="manifest" href="coin_collector.manifest.json">
 
 	</head>
 	<body>
@@ -91,14 +91,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" src="coin-collector.png" alt="">
+			<img id="status-splash" src="coin_collector.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
-		<script src="coin-collector.js"></script>
+		<script src="coin_collector.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"coin-collector","experimentalVK":false,"fileSizes":{"coin-collector.pck":1784640,"coin-collector.wasm":1642043},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"coin-collector.service.worker.js"};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"coin_collector","experimentalVK":false,"fileSizes":{"coin_collector.pck":1784640,"coin_collector.wasm":1642043},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"coin_collector.service.worker.js"};
 const GODOT_THREADS_ENABLED = true;
 const engine = new Engine(GODOT_CONFIG);
 
